# midgetpack

./: CMakeLists.txt  ConfigureChecks.cmake  DefineOptions.cmake  LICENSE  README  config.h.cmake
cmake/Modules/: DefineCompilerFlags.cmake
src/: CMakeLists.txt
src/include/: aes.h  elf.h  midgetpack.h  shared.h  stub.h
src/packer/: CMakeLists.txt  crypto.c  elf.c  midgetpack.c  mpkex.c
src/shared/: CMakeLists.txt  aes.c  crypto.c  curve25519_ref.c  sha256.c
src/stub/: CMakeLists.txt  freebsd_amd64.s  freebsd_x86.s  linux_amd64.s  linux_armv6.s  linux_x86.s  pack_amd64.s  pack_armv6.s  pack_common.c  pack_x86.s
src/stub/precompiled/: stub_freebsd_amd64  stub_freebsd_x86  stub_linux_amd64  stub_linux_armv6  stub_linux_x86
src/tests/: CMakeLists.txt  banner  test.c
